--- a/Basics_libraries.ipynb
+++ b/Basics_libraries.ipynb
@@ -20,6 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function that takes in a vector and returns a new vector where\n",
     "every element is separated by 4 consecutive zeros.\n",
     "\n",
@@ -68,6 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function that takes in a vector and returns the value contained in the vector that is closest to a given value. If two values are equidistant from val, return the one that comes first in\n",
     "the vector.\n",
     "\n",
@@ -115,6 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function that takes in two vectors and returns the associated Cauchy\n",
     "matrix with entries a_ij = 1/(x_i-y_j).\n",
     "\n",
@@ -177,6 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function that takes in a vector x and a list of vectors and finds,\n",
     "in the list, the index of the vector that is most similar to x using\n",
     "cosine similarity.\n",
@@ -224,6 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function that does gradient descent with a fixed learning_rate on function f with gradient g and stops when the update has magnitude under a given tolerance level (i.e. when |xk-x(k-1)| < tol).\n",
     "Return a tuple with the position, the value of f at that position and the magnitude of the last update.\n",
     "* h(x) = (x-1)^2 + exp(-x^2/2)\n",
@@ -338,36 +343,38 @@
    "metadata": {},
    "source": [
     "\n",
-    "    Write a function that takes a square matrix of integers and returns a set of all valid\n",
-    "    positions (i,j) of a value. Each position should be returned as a tuple of two\n",
-    "    integers.\n",
+    "Write a function that takes a square matrix of integers and returns a set of all valid positions (i,j) of a value. Each position should be returned as a tuple of two integers.\n",
     "\n",
-    "    The matrix is structured in the following way:\n",
-    "    - each row has strictly decreasing values with the column index increasing\n",
-    "    - each column has strictly decreasing values with the row index increasing\n",
+    "The matrix is structured in the following way:\n",
+    " - each row has strictly decreasing values with the column index increasing\n",
+    " - each column has strictly decreasing values with the row index increasing\n",
     "    The following matrix is an example:\n",
     "\n",
-    "    Example 1 :\n",
+    "Example 1 :\n",
+    "\n",
     "    mat = [ [10, 7, 5],\n",
     "            [ 9, 4, 2],\n",
     "            [ 5, 2, 1] ]\n",
+    "    \n",
     "    find_element(mat, 4) --> {(1, 1)}\n",
     "\n",
-    "    Example 2 :\n",
+    "Example 2 :\n",
+    "    \n",
     "    mat = [ [10, 7, 5],\n",
     "            [ 9, 4, 2],\n",
     "            [ 5, 2, 1] ]\n",
+    "    \n",
     "    find_element(mat, 5) --> {(0, 2), (2, 0)}\n",
     "\n",
-    "    The function should raise an exception ValueError if the value isn't found.\n",
+    "The function should raise an exception ValueError if the value isn't found.\n",
     "\n",
-    "    :param sq_mat: the square input matrix with decreasing rows and columns\n",
-    "    :type sq_mat:  numpy.array of int\n",
-    "    :param val:    the value to be found in the matrix\n",
-    "    :type val:     int\n",
-    "    :return:       all positions of the value in the matrix\n",
-    "    :rtype:        set of tuple of int\n",
-    "    :raise ValueError:\n"
+    "* :param sq_mat: the square input matrix with decreasing rows and columns\n",
+    "* :type sq_mat: numpy.array of int\n",
+    "* :param val: the value to be found in the matrix\n",
+    "* :type val: int\n",
+    "* :return: all positions of the value in the matrix\n",
+    "* :rtype: set of tuple of int\n",
+    "* :raise ValueError:\n"
    ]
   },
   {
@@ -406,18 +413,18 @@
    "metadata": {},
    "source": [
     "\n",
-    "    Write a function that takes an n x p matrix of integers and sets the rows\n",
-    "    and columns of every zero-entry to zero.\n",
+    "Write a function that takes an n x p matrix of integers and sets the rows and columns of every zero-entry to zero.\n",
     "\n",
-    "    Example:\n",
+    "Example:\n",
+    "    \n",
     "    [ [1, 2, 3, 1],        [ [0, 2, 0, 1],\n",
     "      [5, 2, 0, 2],   -->    [0, 0, 0, 0],\n",
     "      [0, 1, 3, 3] ]         [0, 0, 0, 0] ]\n",
     "\n",
-    "    :param mat: input matrix\n",
-    "    :type mat:  numpy.array of int\n",
-    "    :return:   a matrix where rows and columns of zero entries in mat are zero\n",
-    "    :rtype:    numpy.array\n"
+    "* :param mat: input matrix\n",
+    "* :type mat:  numpy.array of int\n",
+    "* :return:   a matrix where rows and columns of zero entries in mat are zero\n",
+    "* :rtype:    numpy.array\n"
    ]
   },
   {
@@ -440,7 +447,6 @@
    ],
    "source": [
     "def filter_matrix(mat):\n",
-    "   \n",
     "    if np.any(mat):\n",
     "        find_zero = tuple(np.where(mat == 0))\n",
     "        ind_zero = tuple(zip(find_zero[0], find_zero[1]))\n",
@@ -461,18 +467,18 @@
    "metadata": {},
    "source": [
     "\n",
-    "    Write a function that takes in a list of integers,\n",
-    "    finds the sublist of contiguous values with at least one\n",
-    "    element that has the largest sum and returns the sum.\n",
-    "    If the list is empty, 0 should be returned.\n",
+    "Write a function that takes in a list of integers,\n",
+    "finds the sublist of contiguous values with at least one element that has the largest sum and returns the sum.\n",
+    "If the list is empty, 0 should be returned.\n",
     "\n",
-    "    Example:\n",
+    "Example:\n",
+    " \n",
     "    [-1, 2, 7, -3] --> the sublist with larger sum is [2, 7], the sum is 9.\n",
     "\n",
-    "    :param intlist: input list of integers\n",
-    "    :type intlist:  list of int\n",
-    "    :return:       the largest sum\n",
-    "    :rtype:         int\n"
+    "* :param intlist: input list of integers\n",
+    "* :type intlist:  list of int\n",
+    "* :return:       the largest sum\n",
+    "* :rtype:         int\n"
    ]
   },
   {
@@ -493,7 +499,6 @@
    ],
    "source": [
     "def largest_sum(intlist):\n",
-    "\n",
     "    maxSum = float(\"-inf\")     #Kandane's Algorithm edited\n",
     "    cur_max_sum = 0\n",
     "    if intlist:\n",
@@ -508,7 +513,7 @@
     "        return 0\n",
     "\n",
     "intlist = [-1, 2, 7, -3]\n",
-    "largest_sum(intlist)\n"
+    "largest_sum(intlist)"
    ]
   },
   {
@@ -531,11 +536,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Write a function that takes a DataFrame with a colum `A` of integers and\n",
-    "    filters out the rows which contain the same value as a row above.\n",
-    "    Check that the index is right, use reset_index if necessary.\n",
+    "    \n",
+    "Write a function that takes a DataFrame with a colum `A` of integers and filters out the rows which contain the same value as a row above.\n",
+    "Check that the index is right, use reset_index if necessary.\n",
     "\n",
-    "    Example:\n",
+    "Example:\n",
+    "    \n",
     "        A   ...            A   ...\n",
     "    ___________        ___________\n",
     "    0 | 1 | ...        0 | 1 | ...\n",
@@ -547,8 +553,8 @@
     "    6 | 2 | ...\n",
     "    7 | 1 | ...\n",
     "\n",
-    "    :param df: input data frame with a column `A`\n",
-    "    :type df: pandas.DataFrame\n",
+    "* :param df: input data frame with a column `A`\n",
+    "* :type df: pandas.DataFrame\n",
     "    :return: a dataframe where rows have been filtered out\n",
     "    :rtype: pandas.DataFrame\n"
    ]
