--- a/Basics_libraries.ipynb
+++ b/Basics_libraries.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,13 +555,13 @@
     "\n",
     "* :param df: input data frame with a column `A`\n",
     "* :type df: pandas.DataFrame\n",
-    "    :return: a dataframe where rows have been filtered out\n",
-    "    :rtype: pandas.DataFrame\n"
+    "* :return: a dataframe where rows have been filtered out\n",
+    "* :rtype: pandas.DataFrame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -617,14 +617,13 @@
        "3  2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def filter_rep(df):\n",
-    "    \n",
     "    df_filtered = df.drop_duplicates('A', keep=\"first\")\n",
     "    df_filt = df_filtered.reset_index(drop=True)\n",
     "    return df_filt\n",
@@ -637,24 +636,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Given a DataFrame of numeric values, write a function to subtract the row\n",
-    "    mean from each element in the row.\n",
     "\n",
-    "    Example:\n",
+    "Given a DataFrame of numeric values, write a function to subtract the row mean from each element in the row.\n",
+    "\n",
+    "Example:\n",
+    "    \n",
     "        A   B   C                A     B     C\n",
     "    _____________         _____________________\n",
     "    0 | 1 | 5 | 0    -->  0 | -1.0 | 3.0 | -2.0\n",
     "    1 | 2 | 6 | 1         1 | -1.0 | 3.0 | -2.0\n",
     "\n",
-    "    :param df: input data frame\n",
-    "    :type df:  pandas.DataFrame\n",
-    "    :return:  a dataframe where each row is centred\n",
-    "    :rtype:   pandas.DataFrame"
+    "* :param df: input data frame\n",
+    "* :type df:  pandas.DataFrame\n",
+    "* :return:  a dataframe where each row is centred\n",
+    "* :rtype:   pandas.DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "1 -1.0  3.0 -2.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,6 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Here is some chemistry data:\n",
     "   Time (decade): 0, 1, 2, 3, 4, 5, 6\n",
     "   CO2 concentration (ppm): 250, 265, 272, 260, 300, 320, 389\n",
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -787,6 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Plot the following lines on the same plot\n",
     "\n",
     "* y=cos(x) coloured in red with dashed lines\n",
@@ -800,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
