--- a/Basics_libraries.ipynb
+++ b/Basics_libraries.ipynb
@@ -288,18 +288,17 @@
    "metadata": {},
    "source": [
     "\n",
-    "    Write a function to determine if a string is only made of unique\n",
-    "    characters and returns True if that's the case, False otherwise.\n",
-    "    Upper case and lower case should be considered as the same character.\n",
+    "Write a function to determine if a string is only made of unique characters and returns True if that's the case, False otherwise.\n",
+    "Upper case and lower case should be considered as the same character.\n",
     "\n",
-    "    Example:\n",
+    "Example:\n",
+    "    \n",
     "    \"qwr#!\" --> True, \"q Qdf\" --> False\n",
     "\n",
-    "    :param string: input string\n",
-    "    :type string:  string\n",
-    "    :return:      true or false if string is made of unique characters\n",
-    "    :rtype:        bool\n",
-    "    \"\"\""
+    "* :param string: input string\n",
+    "* :type string:  string\n",
+    "* :return:      true or false if string is made of unique characters\n",
+    "* :rtype:        bool\n"
    ]
   },
   {
